add something to support penglai； * insmod tool in busybox * penglai rcS to auto use insmod * please use initramfs-autorun in this version

--- a/apps/redis/Makefile
+++ b/apps/redis/Makefile
@@ -5,7 +5,7 @@ include $(RISCV_ROOTFS_HOME)/Makefile.app
 REPO_PATH = repo
 $(REPO_PATH):
 	mkdir -p $@
-	git clone --depth 1 -b 4.0.2 https://github.com/antirez/redis.git $@
+	git clone --depth 1 -b 4.0.2 https://github.com/redis/redis.git $@
 	cd $@ && git apply ../riscv-cross-compile.patch
 
 $(APP): | $(REPO_PATH)
