--- a/apps/busybox/config
+++ b/apps/busybox/config
@@ -558,7 +558,7 @@ CONFIG_LSATTR=y
 CONFIG_MODPROBE_SMALL=y
 # CONFIG_DEPMOD is not set
 CONFIG_INSMOD=y
-# CONFIG_LSMOD is not set
+CONFIG_LSMOD=y 
 # CONFIG_FEATURE_LSMOD_PRETTY_2_6_OUTPUT is not set
 CONFIG_MODINFO=y
 # CONFIG_MODPROBE is not set
