solve the problem that busybox repo not work: * use tar file to get the source code

--- a/apps/busybox/Makefile
+++ b/apps/busybox/Makefile
@@ -1,12 +1,19 @@
 NAME = busybox
-
+BUSYBOX_VERSION = 1.32.0
 include $(RISCV_ROOTFS_HOME)/Makefile.app
 
 .PHONY: repo
 REPO_PATH = repo
 $(REPO_PATH):
 	-mkdir -p $@
-	-git clone --depth 1 -b 1_32_stable git://git.busybox.net/busybox $@
+ifeq ($(wildcard ./busybox-$(BUSYBOX_VERSION).tar.bz2),)
+	wget https://busybox.net/downloads/busybox-$(BUSYBOX_VERSION).tar.bz2 
+endif
+ifeq ($(wildcard ./repo/INSTALL),)
+	tar xvf busybox-$(BUSYBOX_VERSION).tar.bz2 --directory=repo
+	mv ./repo/busybox-$(BUSYBOX_VERSION)/.[^.]* ./repo/busybox-$(BUSYBOX_VERSION)/* ./repo/
+	rm -rf ./repo/busybox-$(BUSYBOX_VERSION)/
+endif
 	cp config $@/.config
 	-$(MAKE) -C $(REPO_PATH)
 	-mkdir $(RISCV_ROOTFS_HOME)/rootfsimg/build
