--- a/apps/penglai-sdk/Makefile
+++ b/apps/penglai-sdk/Makefile
@@ -5,7 +5,7 @@ export PENGLAI_SDK=$(abspath ./repo)
 REPO_PATH = repo
 $(REPO_PATH):
 	-mkdir -p $@
-	-git clone https://github.com/ICT-TEE/penglai-sdk-for-nemu.git $@
+	-git clone https://github.com/ICT-TEE/penglai-sdk-for-nemu.git $@ dev-pxy
 	-$(MAKE) -C $(REPO_PATH)
 	-mkdir $(RISCV_ROOTFS_HOME)/rootfsimg/build 
 	-touch $(RISCV_ROOTFS_HOME)/rootfsimg/build/host
