fix(penglai-enclave): open SUM.
* set SUM 1 in penglai-driver.

--- a/apps/penglai-driver/Makefile
+++ b/apps/penglai-driver/Makefile
@@ -11,11 +11,14 @@ penglai-objs := penglai-enclave-driver.o \
 	penglai-enclave.o \
 	penglai-enclave-ioctl.o 
 
-LINUX_HOME=/nfs/home/pengxuanyao/Workspace/NEMU-TEE/riscv-linux
+LINUX_HOME=/nfs/home/pengxuanyao/Workspace/debian_linux_kernel
+RISCV_ROOTFS_HOME=/nfs/home/pengxuanyao/Workspace/riscv-rootfs
+
+# LINUX_HOME=/nfs/home/pengxuanyao/Workspace/NEMU-TEE/riscv-linux
 
 all:
 	make -C $(LINUX_HOME) ARCH=riscv M=$(shell pwd) CROSS_COMPILE=riscv64-unknown-linux-gnu- modules
-	-mkdir $(RISCV_ROOTFS_HOME)/rootfsimg/build/
+	-mkdir -p $(RISCV_ROOTFS_HOME)/rootfsimg/build/
 	-touch $(RISCV_ROOTFS_HOME)/rootfsimg/build/penglai.ko
 	ln -sf $(abspath ./penglai.ko) $(RISCV_ROOTFS_HOME)/rootfsimg/build/penglai.ko
 
